# Altirra-Linux

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  release.py
.github/workflows/: ci.yml  release.yml
cmake/: AltirraCompilerFlags.cmake  EmbedResources.cmake  FetchImGui.cmake
data/: altirra.desktop  altirra.metainfo.xml
scripts/: makefeed.py
src/: .editorconfig  Altirra.sln  BUILD-HOWTO.html
src/ATAudio/: ATAudio.vcxproj  ATAudio.vcxproj.filters  CMakeLists.txt
src/ATAudio/h/at/ataudio/: audiosamplebuffer.h
src/ATAudio/source/: audioconvolutionplayer.cpp  audiofilters.cpp  audioout_sdl2.cpp  audioout_sdl2.h  audioout_sdl3.cpp  audioout_sdl3.h  audiooutput.cpp  audiosamplebuffer.cpp  audiosampleplayer.cpp  audiosamplepool.cpp  pokey.cpp  pokeyrenderer.cpp  pokeysavestate.cpp
src/ATCPU/: CMakeLists.txt
src/ATCPU/h/: co65802.inl
src/ATCPU/source/: co6502.cpp  co6502machine.cpp
src/ATCore/: CMakeLists.txt
src/ATCore/h/: stdafx.h
src/ATCore/source/: checksum_intrin.cpp  configvar.cpp  consoleoutput.cpp  decmath.cpp  fft_avx2.cpp  progress.cpp  serialization.cpp  sioutils.cpp  timerserviceimpl_linux.cpp
src/ATDebugger/: CMakeLists.txt
src/ATDebugger/h/at/atdebugger/internal/: debugdevice.h
src/ATDebugger/source/: debugdevice.cpp  defsymbols.cpp  historytree.cpp  symbolio.cpp  symbols.cpp
src/ATDevices/: CMakeLists.txt
src/ATDevices/h/: diskdrive.h  exeloader.h  stdafx.h
src/ATDevices/h/at/atdevices/: supersalt.h
src/ATDevices/source/: diskdrive.cpp  exeloader.cpp  paralleltoserial.cpp  parfilewriter.cpp  sioclock.cpp  supersalt.cpp  testdevicesiohs.cpp  testdevicesiopoll.cpp
src/ATEmulation/: CMakeLists.txt
src/ATEmulation/h/: stdafx.h
src/ATEmulation/source/: diskutils.cpp  via.cpp
src/ATHelpFile/: ATHelpFile.vcxproj  ATHelpFile.vcxproj.filters
src/ATHelpFile/source/: customdev-scriptingref.xml  customdev-spec.xml  customeffect.xml  devices-xep80.xml  getting-started.xml  index.xsl  myide.xml  options-firmware.xml  toc-html.xsl  toc.xml
src/ATIO/: ATIO.vcxproj  ATIO.vcxproj.filters  CMakeLists.txt
src/ATIO/h/: stdafx.h
src/ATIO/h/at/atio/: vorbisdecoder.h
src/ATIO/source/: audioreader.cpp  audioreaderflac.cpp  cartridgeimage.cpp  cassetteaudiofilters.cpp  cassetteimage.cpp  diskfscpm.cpp  diskfsdos2.cpp  diskfssdx2.cpp  diskimage.cpp  image.cpp  savestate.cpp  tapepiecetable.cpp  vorbisbitreader.cpp  vorbisdecoder.cpp  vorbismisc.cpp
src/ATNativeUI/: ATNativeUI.vcxproj  ATNativeUI.vcxproj.filters
src/ATNetwork/: CMakeLists.txt
src/ATNetwork/h/: stdafx.h  tcpstack.h
src/ATNetwork/source/: dhcpd.cpp  tcpstack.cpp  udpstack.cpp
src/ATNetworkSockets/: CMakeLists.txt
src/ATNetworkSockets/h/: stdafx.h
src/ATNetworkSockets/h/at/atnetworksockets/internal/: socketworker.h  vxlantunnel.h  worker.h
src/ATNetworkSockets/source/: nativesockets.cpp  nativesockets_linux.cpp  socketworker.cpp  vxlantunnel.cpp
src/ATTest/: CMakeLists.txt
src/ATTest/h/: stdafx.h
src/ATTest/source/: TestCore_FFT.cpp  TestCore_VFS.cpp  TestEmu_PokeyPots.cpp  TestIO_FLAC.cpp  TestKasumi_Pixmap.cpp  TestKasumi_Resampler.cpp  TestSystem_Exception.cpp  TestSystem_Filesys.cpp  TestSystem_Function.cpp  TestSystem_Math.cpp  TestSystem_Zip.cpp  TestTrace_CPU.cpp  main.cpp  main_linux.cpp
src/ATUI/: CMakeLists.txt
src/ATVM/: CMakeLists.txt
src/ATVM/h/: stdafx.h
src/ATVM/source/: compiler.cpp
src/Altirra/: Altirra.vcxproj  Altirra.vcxproj.filters
src/Altirra/h/: 1025full.h  (+96 more)
src/AltirraLinux/: CMakeLists.txt  README.md
src/AltirraLinux/h/: stdafx.h  tchar.h  uienhancedtext.h
src/AltirraLinux/h/at/atnativeui/: uiframe.h
src/AltirraLinux/source/: console_linux.cpp  main_linux.cpp  modemtcp_linux.cpp  oshelper_linux.cpp  stubs_linux.cpp  uikeyboard_linux.cpp  worker_linux.cpp
src/AltirraShell/: CMakeLists.txt
src/AltirraShell/h/: cartridge_names.h  commands_linux.h  debugger_imgui.h  display_sdl2.h  display_sdl3.h  emulator_imgui.h  error_imgui.h  filedialog_linux.h  firmware_names.h  imgui_manager.h  input_sdl2.h  input_sdl3.h
src/AltirraShell/source/: commands_linux.cpp  debugger_imgui.cpp  display_sdl2.cpp  display_sdl3.cpp  emulator_imgui.cpp  enhancedtext_linux.cpp  filedialog_linux.cpp  imgui_manager.cpp  input_sdl2.cpp  input_sdl3.cpp  joystick_sdl2.cpp  joystick_sdl3.cpp
src/AltirraWx/: CMakeLists.txt
src/AltirraWx/h/: debugger_imgui.h  debugger_wx.h  dialogs_wx.h  display_sdl3.h  display_wx.h  emulator_imgui.h  error_imgui.h  imgui_manager.h  input_wx.h  mainframe.h  menu_ids.h
src/AltirraWx/source/: console_wx.cpp  debugger_wx.cpp  dialog_audio.cpp  dialog_boot.cpp  dialog_cartridge.cpp  dialog_cassette.cpp  dialog_cpu.cpp  dialog_devices.cpp  dialog_firmware.cpp  dialog_keyboard.cpp  dialog_misc.cpp  dialog_system.cpp  dialog_video.cpp  display_wx.cpp  input_wx.cpp  main_wx.cpp  mainframe.cpp  menubar.cpp  stdafx.h
src/Kasumi/: CMakeLists.txt  Kasumi.vcxproj  Kasumi.vcxproj.filters
src/Kasumi/h/: blt_spanutils_arm64.h  resample_stages.h  resample_stages_arm64.h  uberblit_gen.h  uberblit_rgb.h
src/Kasumi/source/: a64_resample.asm64  a_resample_mmx.asm  blt.cpp  blt_reference_yuvrev.cpp  blt_spanutils_arm64.cpp  resample.cpp  resample_kernels.cpp  resample_stages.cpp  resample_stages_arm64.cpp  resample_stages_x64.cpp  resample_stages_x86.cpp  uberblit_gen.cpp  uberblit_resample.cpp
src/Kernel/: Kernel.vcxproj  Kernel.vcxproj.filters  Makefile
src/Shared/: altirra.natvis
src/VDDisplay/: VDDisplay.vcxproj  VDDisplay.vcxproj.filters
src/h/: intrin.h
src/system/: CMakeLists.txt  system.vcxproj  system.vcxproj.filters
src/system/h/: stdafx.h
src/system/source/: Error.cpp  Fraction.cpp  binary.cpp  bitmath.cpp  cpuaccel_linux.cpp  date_linux.cpp  debug_linux.cpp  error_linux.cpp  file_linux.cpp  fileasync.cpp  filestream.cpp  filesys_linux.cpp  int128.cpp  linearalloc.cpp  math.cpp  memory.cpp  registry_linux.cpp  text.cpp  thread.cpp  thread_linux.cpp  time_linux.cpp  vdstl.cpp  w32assist.cpp  zip.cpp
src/vdjson/: CMakeLists.txt
testdata/feed/: altirra-update-dev.xml  altirra-update-release.xml
(+343 files in other folders)
