cmake_minimum_required(VERSION 3.20)
project(Altirra VERSION 4.40.1 LANGUAGES CXX)

# Include shared compiler flags
include(cmake/AltirraCompilerFlags.cmake)

# Optional FFmpeg detection for H.264 video recording on Linux
if(NOT WIN32)
	find_package(PkgConfig QUIET)
	if(PkgConfig_FOUND)
		pkg_check_modules(LIBAVCODEC libavcodec)
		pkg_check_modules(LIBAVFORMAT libavformat)
		pkg_check_modules(LIBAVUTIL libavutil)
		pkg_check_modules(LIBSWSCALE libswscale)
		pkg_check_modules(LIBSWRESAMPLE libswresample)
		if(LIBAVCODEC_FOUND AND LIBAVFORMAT_FOUND AND LIBAVUTIL_FOUND AND LIBSWSCALE_FOUND AND LIBSWRESAMPLE_FOUND)
			set(AT_HAVE_FFMPEG TRUE)
			message(STATUS "FFmpeg found - H.264 recording enabled")
		else()
			set(AT_HAVE_FFMPEG FALSE)
			message(STATUS "FFmpeg not found - H.264 recording disabled")
		endif()
	endif()
endif()

# Global include paths (mirrors VS solution include dirs)
include_directories(${CMAKE_SOURCE_DIR}/src/h)

# Foundation libraries (Phase 0)
add_subdirectory(src/system)
add_subdirectory(src/vdjson)

# Core emulation libraries (Phase 2)
add_subdirectory(src/Kasumi)
add_subdirectory(src/ATCore)
add_subdirectory(src/ATCPU)
add_subdirectory(src/ATEmulation)
add_subdirectory(src/ATAudio)
add_subdirectory(src/ATIO)
add_subdirectory(src/ATDevices)
add_subdirectory(src/ATNetwork)
add_subdirectory(src/ATNetworkSockets)
add_subdirectory(src/ATDebugger)
add_subdirectory(src/ATVM)
add_subdirectory(src/ATTest)

# UI command manager (platform-independent)
add_subdirectory(src/ATUI)

# Linux frontend (Phase 3-5) + Dear ImGui (Phase 7)
if(NOT WIN32)
	include(cmake/FetchImGui.cmake)
	add_subdirectory(src/AltirraShell)
	add_subdirectory(src/AltirraLinux)
endif()
